Initial commit: ShopSpeak project

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>ShopSpeak 🛒🎤</title>
+    <title>ShopSpeak 🛒</title>
 
-    <!-- Elegant font -->
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700;800&display=swap" rel="stylesheet">
   </head>
   <body>
